Thu May 16 15:09:19 2002  George Lebl <jirka@5z.com>

	* log_repaint.c, zoom.c: partially fix #81252 by converting output
	  of strftime to utf8.  Also convert the string to utf8, this still
	  needs a bit of work, so I'm not closing the bug yet

	* logview.c: fix crash when closing window

2002-05-14  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-actions.db: Comment out example
	strings. I wish I am more time to look through this 
	properly.

2002-05-11 Samuel Stringham  <sams@e-sa.com> 

	* logrtns.c: On log rotation, or log creation, 
	or just empty logs logview fails.  Tough to tell if 
	a log is actually a system log when it is empty, but 
	should still try to read/monitor it. Fixes #81348.

2002-05-11  Samuel Stringham  <sams@e-sa.com>
	
	* actions.c: Fix crash in actions dialog. Fixes #81397.

2002-05-11  Samuel Stringham  <sams@e-sa.com>

	* logview.c: remove bogus spacing. Fixes #81399.

2002-05-10  Glynn Foster  <glynn.foster@sun.com>

	* calendar.c, logview.c, zoom.c: Fix crashes on dialog 
	boxes when 'Esc' is used.

2002-05-10  Glynn Foster  <glynn.foster@sun.com>

	* logrtns.c: Add sanity check. Fixes #81265.

2002-05-08  Glynn Foster  <glynn.foster@sun.com>

	* about.c, logview.c: Fix up some inconsistancies as pointed
	out by the doc team.

2002-05-08  Glynn Foster  <glynn.foster@sun.com>

	* calendar.c, log_repaint.c, logview.c, zoom.c: More
	HIG Compliance stuff. Fixes #76685 in part. Man, this 
	code is *so* ugly. Hack after hack after hack. [sigh].

2002-05-07  Samuel Stringham <sams@e-sa.com>

	* zoom.c: (repaint_zoom): Fix repaint on zoom-in box. Fixes	
	#80904.

2002-05-07  Samuel Stringham <sams@e-sa.com>

	* actions.c, log_repaint.c: Some UI love.

2002-05-07  Satyajit Kanungo  <satyajit.kanungo@wipro.com>

	* gnome-system-log.desktop.in: Added DocPath in the 
	desktop.in file. Fixes #80921.

2002-05-03  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: s/Date/Last Modified. It seems a slightly better